erDiagram
    assets {
        TEXT ticker PK "銘柄コード"
        TEXT ccy "通貨 (ISO 3-letter)"
        TEXT name "名称 (任意)"
    }
    fx_rates {
        TEXT date PK "日付"
        TEXT pair PK "通貨ペア (例: USDJPY)"
        REAL rate "終値レート"
    }
    snapshots {
        TEXT date PK "日付"
        TEXT ticker PK "銘柄"
        REAL qty "数量"
        REAL price_ccy "現地通貨価格"
    }
    cashflows {
        INTEGER id PK "ID"
        TEXT date "日付"
        TEXT ticker "銘柄"
        TEXT type "種類 (DIVIDEND 等)"
        REAL amount_ccy "金額"
        TEXT ccy "通貨"
    }

    assets ||--o{ snapshots : "PK→FK"
    assets ||--o{ cashflows : "PK→FK"
    fx_rates ||..o{ snapshots : "日付+通貨で参照"
    fx_rates ||..o{ cashflows : "日付+通貨で換算"
